# edsm

./: Cargo.toml
examples/: api.rs  dumps.rs
src/: api.rs  body.rs  faction.rs  lib.rs  serde_utils.rs  system.rs
tests/: api.rs  edsm_api.rs  edsm_dumps.rs  lib.rs  systemsPopulated.json  systemsWithCoordinates.json  systemsWithoutCoordinates.json
