[package]
name = "edsm"
version = "0.0.2"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
edition = "2018"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = { version = "*", features = ["serde"] }

[target.'cfg(unix)'.dependencies.reqwest]
version = "*"
features = ["blocking", "json"]

[dependencies.elite_journal]
git = "https://github.com/ED-NEWP/elite_journal"
