[package]
name = "edsm"
version = "0.0.3"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
edition = "2018"

[dependencies]
elite_journal = { path = "../elite_journal" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = { version = "*", features = ["serde"] }
reqwest = { version = "*", features = ["blocking", "json"] }
